
2017-10-24  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y: fixed bug #454 suspicious warning with actual working
	  CURRENCY SIGN, better error messages for this clause
	* error.c, cobc.c: changed message format back to old version,
	  see bug #455

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: moved include of top_srcdir to AM_CPPFLAGS to prevent
	  user-specified CPPFLAGS to override own includes, see bug #452
	* cobc.c: minimal support for DJGGP, including generation of 8.3 filenames
	* cobc.c: don't halt immediately on first PATH error during startup,
	  postponed until command line arguments are processed

2017-10-14  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: refactored and improved variable names in external form
	  functions.

2017-10-07  Ron Norman <rjn@inglenet.com>

	* codegen.c: correction for -fodoslide

2017-10-06  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, tree.c, tree.h: added RECORD DELIMITER syntax checks.
	* parser.y, cobc.h, reserved.c: added BINARY-SEQUENTIAL and
	  LINE-SEQUENTIAL phrases to RECORD DELIMITER.
	* config.def: added config options for RECORD DELIMITER clause.

2017-09-28  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (stop_statement): set context-sensitive flag (bug #433).

2017-09-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_abort_msg): output orig_program_id instead of C-converted
	* codegen.c (codegen): adjust current_program used for error messages
	  during code generation of nested programs
	* parser.y: fixed missing warning for pending CURRENCY SIGN other than '$'
	* cobc.c, tree.c, tree.h: fixed #435 - nested programs had no access to
	  identifiers in its parent's scope: added next_program_ordered to
	  struct cb_program set in (restore_program_list_order) and used for
	  checking nested lookups afterwards

2017-09-22  Edward Hart <edward.dan.hart@gmail.com>
